# FSimulator

./: .gitignore  CMakeLists.txt  Contracts.csv  README.md  base_config.py  clibapp.cpp  clibapp.h  clibdef.h  code.cpp  conf.json  conf_linux.hkey  conf_linux.json  embedpython.cpp  embedpython.h  forecaster.cpp  fsimulator.pro  futureinfo.csv  lmice.lmice  mainwindow.cpp  mainwindow.h  mainwindow.ui  meta.json  monitor.cpp  monitor.pro  monitor.qrc  my_plugin.c  proc_result.py  signal_app  signal_calc.py  stdafx.h  testlib.c  testlib.py  testlib2.py  ttt.cpp  variantfilebrowsemanager.cpp  variantfilebrowsemanager.h
autotools/: __init__.py  base_config.py  builder.py  clibapp.cpp  clibapp.h  clibdef.h  forecasterhandle.py  forecastertask.py  guavahandle.py  guavaproto.h  guavatask.py  market_calc.py  optimizehandle.py  optimizetask.py  signal_calc.py  testpy.py  trading_signal.py
autotools/opencl/: config.c  config.h  fitting.c  fitting.h  main.c  mykernel.cl  prng.c  prng.h  signalcalc_tmpl.cl  signalcalchandle.py  signalcalctask.py  subsignal_trade.cl  verify.c
future-p-h/: ChinaL1DiscreteFeature.h  forecaster.h
instrument-check/: Contracts.csv  futurecontracts.py
